refactor: removed CORS from SecurityConfiguration